@@ -148,6 +148,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14313: zipfile now raises NotImplementedError when the compression
+  type is unknown.
+
 - Issue #16408: Fix file descriptors not being closed in error conditions
   in the zipfile module.  Patch by Serhiy Storchaka.
 
